Some final tweaks before beta 1

--- a/assets/scss/init/_variables.scss
+++ b/assets/scss/init/_variables.scss
@@ -112,7 +112,7 @@ $yiq-contrasted-threshold:  150;
   --admin-sidebar: #2F3E4D;
   --admin-sidebar-text: #EEE;
   --admin-sidebar-icon: #FFF;
-  --admin-sidebar-menu: #f0f3f5;
+  --admin-sidebar-menu: #FFF;
   --admin-sidebar-menu-text: #666;
   --admin-toolbar: #4C6E91;
   --admin-toolbar-text-light: #fff;
