Add theme asset package

--- a/public/theme/skeleton/partials/_master.twig
+++ b/public/theme/skeleton/partials/_master.twig
@@ -15,10 +15,8 @@
                 {{- ' | ' ~ config.get('general/payoff') -}}
             {%- endif -%}
         </title>
-        {#<link rel="stylesheet" href="{{ asset('css/normalize.css', 'theme') }}">#}
-        {#<link rel="stylesheet" href="{{ asset('css/sakura.css', 'theme') }}">#}
-        <link rel="stylesheet" href="/theme/skeleton/css/normalize.css">
-        <link rel="stylesheet" href="/theme/skeleton/css/sakura.css">
+        <link rel="stylesheet" href="{{ asset('css/normalize.css', 'theme') }}">
+        <link rel="stylesheet" href="{{ asset('css/sakura.css', 'theme') }}">
     </head>
     <body>
 
