--- a/public/theme/skeleton/partials/_master.twig
+++ b/public/theme/skeleton/partials/_master.twig
@@ -15,11 +15,10 @@
                 {{- ' | ' ~ config.get('general/payoff') -}}
             {%- endif -%}
         </title>
-        <link rel="stylesheet" href="{{ asset('css/normalize.css', 'theme') }}">
-        <link rel="stylesheet" href="{{ asset('css/sakura.css', 'theme') }}">
+        <link rel="stylesheet" href="{{ asset('css/normalize.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/sakura.css') }}">
     </head>
     <body>
-
         {% block body %}
 
             {{ include('partials/_header.twig') }}
