--- a/public/theme/skeleton/index.twig
+++ b/public/theme/skeleton/index.twig
@@ -11,7 +11,10 @@
 
         {{ record|excerpt }}
 
-        {{ popup(record|image, 1200, 500) }}
+        <section class="imageholder">
+            {{ popup(record|image, 1200, 500) }}
+            <small>{{ record|image.alt }}</small>
+        </section>
 
         {{ record.content }}
 
