--- a/public/theme/skeleton/index.twig
+++ b/public/theme/skeleton/index.twig
@@ -13,7 +13,7 @@
 
         <section class="imageholder">
             {{ popup(record|image, 1200, 500) }}
-            <small>{{ record|image.alt }}</small>
+            <small>{{ record|image.title|default(record|image.title)|default('title-less image') }}</small>
         </section>
 
         {{ record.content }}
