--- a/templates/_partials/fields/html.html.twig
+++ b/templates/_partials/fields/html.html.twig
@@ -3,6 +3,6 @@
 {% block field %}
     <editor-html
         :value="{{ value|json_encode }}"
-        :name="'{{ name }}'"
+        :name='{{ name|json_encode }}'
     ></editor-html>
 {% endblock %}
