--- a/templates/_partials/fields/password.html.twig
+++ b/templates/_partials/fields/password.html.twig
@@ -2,12 +2,12 @@
 
 {% block field %}
         <editor-password
-            :id="'{{ id }}'"
-            :name="'{{ name }}'"
-            :value="{{ value|json_encode }}"
-            :label="{{ label|json_encode }}"
-            :label_class="{{ label_class|default()|json_encode }}"
-            :class="{{ class|json_encode }}"
-            :hidden="{{ hidden|default('false') }}"
+            :id='{{ id|json_encode }}'
+            :name='{{ name|json_encode }}'
+            :value='{{ value|json_encode }}'
+            :label='{{ label|json_encode }}'
+            :label_class='{{ label_class|default()|json_encode }}'
+            :class='{{ class|json_encode }}'
+            :hidden='{{ hidden|default('false') }}'
         ></editor-password>
 {% endblock %}
