--- a/templates/_partials/fields/slug.html.twig
+++ b/templates/_partials/fields/slug.html.twig
@@ -2,10 +2,10 @@
 
 {% block field %}
     <editor-slug
-        :value="'{{ value }}'"
-        :name="'{{ name }}'"
-        :prefix="'{{ field.slugPrefix  }}'"
-        :field-class="'{{ class }}'"
-        :generate="'{{ field.slugUseFields|join(', ') }}'"
+        :value='{{ value|json_encode }}'
+        :name='{{ name|json_encode }}'
+        :prefix='{{ field.slugPrefix|json_encode }}'
+        :field-class='{{ class|json_encode }}'
+        :generate='{{ field.slugUseFields|join(', ')|json_encode }}'
     ></editor-slug>
 {% endblock %}
