--- a/templates/_partials/fields/embed.html.twig
+++ b/templates/_partials/fields/embed.html.twig
@@ -2,15 +2,15 @@
 
 {% block field %}
     <editor-embed
-        :embedapi="'{{ path('bolt_embed') }}'"
-        :name="'{{ name }}'"
-        :url="'{{ field.get('url') }}'"
-        :width="'{{ field.get('width') }}'"
-        :height="'{{ field.get('height') }}'"
-        :title="'{{ field.get('title')|e('js') }}'"
-        :authorname="'{{ field.get('authorname')|e('js') }}'"
-        :authorurl="'{{ field.get('authorurl') }}'"
-        :html="'{{ field.get('html') }}'"
-        :thumbnail="'{{ field.get('thumbnail') }}'"
+        :embedapi='{{ path('bolt_embed')|json_encode }}'
+        :name='{{ name|json_encode }}'
+        :url='{{ field.get('url')|json_encode }}'
+        :width='{{ field.get('width')|json_encode }}'
+        :height='{{ field.get('height')|json_encode }}'
+        :title='{{ field.get('title')|e('js')|json_encode }}'
+        :authorname='{{ field.get('authorname')|e('js')|json_encode }}'
+        :authorurl='{{ field.get('authorurl')|json_encode }}'
+        :html='{{ field.get('html')|json_encode }}'
+        :thumbnail='{{ field.get('thumbnail')|json_encode }}'
     ></editor-embed>
 {% endblock %}
