--- a/templates/_base/layout.html.twig
+++ b/templates/_base/layout.html.twig
@@ -59,7 +59,7 @@
 
     <!-- Admin Sidebar -->
     <div class="admin__sidebar">
-        <div id="sidebar">
+        <div id="sidebar" class="sidebar">
             <admin-sidebar
               :menu="{{ admin_menu_json }}"
               :version="'{{ constant('Bolt\\Version::VERSION')|replace({'alpha': 'α', 'beta': 'β'}) }}'"
