Place the logo on the login screen

--- a/assets/scss/layout/_login.scss
+++ b/assets/scss/layout/_login.scss
@@ -14,4 +14,14 @@ html#login {
     width: 22rem;
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.4);
   }
+
+  .logo {
+    width: 22rem;
+  }
+
+  h1 {
+    color: #FFF;
+    text-align: center;
+    margin: 2rem 0;
+  }
 }
