--- a/assets/scss/init/_base.scss
+++ b/assets/scss/init/_base.scss
@@ -37,6 +37,7 @@ code {
 .card {
   box-shadow: $card-box-shadow;
   background: #fff;
+  border: 1px solid #E8E8E8 !important;
 
   .card-header {
     font-weight: $font-weight-bold;
