--- a/assets/scss/modules/listing/row/_checkbox.scss
+++ b/assets/scss/modules/listing/row/_checkbox.scss
@@ -25,8 +25,8 @@
 
       &::before,
       &::after {
-        left: $spacer*0.5;
-        top: 0.625rem;
+        left: $spacer*0.45;
+        top: $spacer*0.6;
       }
     }
   }
