--- a/assets/scss/modules/admin/_header.scss
+++ b/assets/scss/modules/admin/_header.scss
@@ -1,15 +1,37 @@
 //** Admin | Header
 
 .admin__header {
+  @include media-breakpoint-up(sm) {
+    background-color: var(--background);
+    position: sticky;
+    top: $admin-toolbar-height;
+    z-index: 2;
+  }
+  //resets sticky as we don't use it above this breakpoint for now
+  @include media-breakpoint-up(lg) {
+    position: static;
+    top: 0;
+  }
   &--title {
-    font-weight: $font-weight-normal;
+    font-weight: $font-weight-semibold;
+    font-size: 1.825rem;
     font-size: $h1-font-size;
     color: var(--admin-sidebar);
+    margin-top: $spacer;
+    position: relative;
+    @include media-breakpoint-up(sm) {
+      margin-top: $spacer*1.8125;
+    }
     i {
       color: var(--boltblue);
-      font-size: 2.125rem;
+      font-size: 1.5rem;
       top: -3px;
       position: relative;
+    }
+    &__prefix {
+      font-weight: $font-weight-normal;
+      font-size: 1rem;
+      display: block;
     }
   }
 
@@ -18,10 +40,16 @@
     justify-content: space-between;
     align-items: center;
     height: 100%;
-    padding: $spacer;
+    padding: $spacer $spacer*0.625 0;
     position: relative;
+    @include media-breakpoint-up(sm) {
+      padding: $spacer*1 $spacer*1 0;
+    }
+    @include media-breakpoint-up(md) {
+      padding: $spacer*1.25 $spacer*1.25 0;
+    }
     @include media-breakpoint-up(wd) {
-      padding: $spacer*3 $column-gap $spacer;
+      padding: $spacer*1.25 $spacer * 1.8125 1rem;
     }
   }
   &--togglebar {
@@ -34,12 +62,18 @@
   position: absolute;
   z-index: 4;
   width: auto;
-  top: 1.625rem;
-  right: 1rem;
+  top: 0.625rem;
+  right: 0.625rem;
   border: 1px solid var(--primary);
-  padding: $spacer*0.4 $spacer;
+  padding: $spacer*0.4 $spacer*1.1;
   color: $white;
   background-color: var(--primary);
+  @include media-breakpoint-up(sm) {
+    right: $spacer * 1;
+  }
+  @include media-breakpoint-up(md) {
+    right: $spacer * 1.25;
+  }
   @include media-breakpoint-up(lg) {
     display: none;
   }
