--- a/assets/scss/modules/listing/_filter.scss
+++ b/assets/scss/modules/listing/_filter.scss
@@ -3,7 +3,11 @@
 .listing__filter {
   display: flex;
   justify-content: space-between;
-  height: 35px;
+  min-height: 40px;
+  background-color: #fff;
+  padding: 0.35rem 0.625rem 0.35rem 0.5rem;
+  border-radius: $border-radius;
+  overflow: hidden;
 
   &:first-of-type {
     margin-bottom: $spacer;
@@ -42,7 +46,6 @@
     }
 
     .custom-control {
-      margin-left: $spacer*0.5;
       margin-top: $spacer*0.25;
     }
 
