--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -1,7 +1,10 @@
 {% extends '@bolt/_base/layout.html.twig' %}
 
 {% block title %}
-    {{ 'caption.about_bolt'|trans }} » {{ 'caption.bolt_payoff'|trans }}
+    <span class="admin__header--title__prefix">
+        {{ 'caption.about_bolt'|trans }} »
+    </span> 
+    {{ 'caption.bolt_payoff'|trans }}
 {% endblock title %}
 
 {% block main %}
