--- a/templates/finder/finder.html.twig
+++ b/templates/finder/finder.html.twig
@@ -6,9 +6,9 @@
 
 {% block main %}
 
-    <h2>{{ 'caption.path'|trans }}: {{ location }}{{ path }}</h2>
-
     {% include '@bolt/finder/_quickselect.html.twig' %}
+
+    {% set imageformats = ['gif', 'jpg', 'jpeg', 'png', 'svg'] %}
 
     {% if view == 'list' %}
         {% include '@bolt/finder/_files_list.html.twig' %}
@@ -23,10 +23,12 @@
 <div class="card mb-4">
     <div class="card-header">{{ 'caption.meta_information'|trans }}</div>
     <div class="card-body">
-        View: {{ view|default('none') }}
+        <p>{{ 'caption.path'|trans }}: <code>{{ location }}{{ path }}</code></p>
+
+        View:
         <div class="btn-group">
-            <a href="?view=list" class="btn btn-secondary"><i class="fas fa-list fa-fw"></i> List</a>
-            <a href="?view=cards" class="btn btn-secondary ml-1"><i class="fas fa-th fa-fw"></i>Cards</a>
+            <a href="{{ path('bolt_filemanager', {'location': location, 'path': path, 'view': 'list' }) }}" class="btn btn-secondary"><i class="fas fa-list fa-fw"></i> List</a>
+            <a href="{{ path('bolt_filemanager', {'location': location, 'path': path, 'view': 'cards' }) }}" class="btn btn-secondary ml-1"><i class="fas fa-th fa-fw"></i>Cards</a>
         </div>
     </div>
 </div>
