--- a/templates/finder/_files_list.html.twig
+++ b/templates/finder/_files_list.html.twig
@@ -62,5 +62,11 @@
                 &nbsp;
             </td>
         </tr>
+    {% else %}
+    <tr>
+        <td colspan="6">
+            <p><strong>No files are present in this folder. Select a folder to navigate to, on the right-hand side.</strong></p>
+        </td>
+    </tr>
     {% endfor %}
 </table>
