--- a/templates/finder/_files_cards.html.twig
+++ b/templates/finder/_files_cards.html.twig
@@ -109,6 +109,9 @@
 
         </div>
     </div>
-
+    {% else %}
+    <div class="col-12">
+        <p><strong>No files are present in this folder. Select a folder to navigate to, on the right-hand side.</strong></p>
+    </div>
     {% endfor %}
 </div>
