--- a/templates/finder/finder.html.twig
+++ b/templates/finder/finder.html.twig
@@ -23,7 +23,7 @@
 <div class="card mb-4">
     <div class="card-header">{{ 'caption.meta_information'|trans }}</div>
     <div class="card-body">
-        <p>{{ 'caption.path'|trans }}: <code>{{ location }}{{ path }}</code></p>
+        <p class="path">{{ 'caption.path'|trans }}: <code>{{ location }}{{ path }}</code></p>
 
         View:
         <div class="btn-group">
